2001-10-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
	* projects.html: Adjust link to the mailing-list archives from
	sources.redhat.com to gcc.gnu.org.

--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -257,7 +257,7 @@ Runtime improvements
             application.  On Windows, it might make sense to do this
             using the standard resource mechanism.  This has been
             <a
-            href="http://sources.redhat.com/ml/java/1999-q3/msg00318.html">discussed</a>
+            href="http://gcc.gnu.org/ml/java/1999-q3/msg00318.html">discussed</a>
             on the mailing list a bit.
 	  </ul>
 <p>
