2001-10-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
	* download.html: Update cvsweb URL.

--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -42,7 +42,7 @@
 </p>
 
 <p>You can also
-<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/libstdc++-v3?cvsroot=gcc">browse 
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libstdc%2b%2b-v3/">browse 
    the CVS repository over the web</a>.
 </p>
 
