Update information on GCC and glibc.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -244,7 +244,7 @@ contributors.</p>
 <ul>
 
 <li>GCC 2.95.2 does not build on GNU/Linux systems using glibc 2.2,
-such as Red Hat 7.0.  This is fixed in GCC 2.95.3 and GCC 3.0.</li>
+such as Red Hat 7.0.  This is fixed in GCC 2.95.3.</li>
 
 <li>GCC 2.95.2 crashes when compiling <code>mbx.c</code> from the PINE
 4.30 or IMAP2000 distribution on Sparc systems running Solaris.</li>
