News: Contributed tree inlining for C

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -164,6 +164,13 @@ system-on-a-chip series.  See
 information.
 </dd>
 
+<dt><b>October 5, 2001</b></dt>
+<dd>
+Alexandre Oliva of Red Hat has generalized the tree inlining
+infrastructure, formerly in the C++ front-end, so that it is now used
+in the C front end too.
+</dd>
+
 <dt><b>October 2, 2001</b></dt>
 <dd>
 <a href="http://www.gnat.com/">Ada Core Technologies, Inc</a>, has contributed 
