Clarify that requirements here apply to everyone.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -148,5 +148,11 @@ as a candidate for the release branch.
   href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>
   instead of gcc-patches.</p>
 
+  <p>Everything listed here still applies if you can check in the
+  patch without further approval under the <a
+  href="cvswrite.html#policies">GCC write access policies</a>, except
+  that ChangeLog entries may be included as part of the patch since
+  no-one else will need to apply it to the tree later.</p>
+
 </body>
 </html>
