Remove link to CodeSourcery's Online Test Compilation which does not exist any longer.  Do not explicitly refer to egcs any longer.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -53,11 +53,9 @@ http://gcc.gnu.org/bugs.html</a>.</p>
 
 <p>Before you report a bug, please check the 
 <a href="#known">list of well-known bugs</a> and, <strong>if possible
-in any way, try a current development snapshot or 
-<a href="http://www.codesourcery.com/gcc-compile.shtml">CodeSourcery's
-Online Test Compilation</a></strong>.  If you want to report a bug
-with egcs 1.x or versions of GCC before 3.0 we strongly recommend
-upgrading to the current release first.</p>
+in any way, try a current development snapshot</strong>.
+If you want to report a bug with versions of GCC before 3.0 we strongly
+recommend upgrading to the current release first.</p>
 
 <p>Before reporting that GCC compiles your code incorrectly, please
 compile it with <code>gcc -Wall</code> and see whether this shows
