--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -545,7 +545,7 @@ to round to the nearest representable number.</p>
 
 <p>This is not a bug in the compiler, but an inherent limitation of
 the float and double types. Please study 
-<a href="http://www.validgh.com/goldberg/paper.ps">this paper</a>
+<a href="http://www.validlab.com/goldberg/paper.ps">this paper</a>
 for more information.</p></dd>
 
 </dl>
