Updated location of SPEC95 tests page.

--- a/htdocs/benchmarks/index.html
+++ b/htdocs/benchmarks/index.html
@@ -29,7 +29,7 @@ results from these runs for different platforms.
 <p>
 Diego Novillo has set up a Pentium III system that runs daily SPEC
 95 tests.  The results can be seen at <a
-href="http://www.cygnus.com/~dnovillo/SPEC/">http://www.cygnus.com/~dnovillo/SPEC/</a>.
+href="http://people.redhat.com/dnovillo/SPEC/">http://people.redhat.com/dnovillo/SPEC/</a>.
 </p>
 
 <h2>SPEC 2000</h2>
