--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -238,8 +238,7 @@ site to relay their spam.
 <a href="http://www.mail-abuse.org/rbl/">MAPS RBL</a>, 
 <a href="http://www.mail-abuse.org/rss/">MAPS RSS</a>, 
 <a href="http://www.mail-abuse.org/dul/">MAPS DUL</a>,
-<a href="http://or.orbl.org/">ORBL</a>,
-<a href="http://orbz.gst-group.co.uk/">ORBZ</a>, and
+<a href="http://orbz.orb/">ORBZ</a>, and
 <a href="http://ordb.org/">ORDB</a>.
 </p>
 
