Add sparc-sun-solaris2.* (64 bits) as not supported.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -235,6 +235,11 @@
 <td>Successful</td>
 </tr>
 
+<tr>
+<td>sparc-sun-solaris2.* (64 bits)</td>
+<td>Not supported</td>
+</tr>
+
 </table>
 
 </body>
