--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -229,6 +229,9 @@ Successful
 <p><b>sparc-sun-solaris2.8</b><br>
 Successful
 
+<p><b>sparc-sun-solaris2.* (64 bits)</b><br>
+Not supported
+
 <p><b>sparc-sun-sunos4.1.3</b><br>
 Successful
 
