--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -9,7 +9,7 @@
 <h1 align="center">GCC Frequently Asked Questions</h1>
 
 <p>The latest version of this document is always available at 
-<a href="http://gcc.gnu.org/faq.html">http://gcc.gnu.org/faq.html</a>.</p>
+<a href="http://www.gnu.org/software/gcc/faq.html">http://www.gnu.org/software/gcc/faq.html</a>.</p>
 
 <p>This FAQ tries to answer specific questions concerning GCC. For
 general information regarding C, C++, resp. Fortran please check the 
