--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -8,8 +8,7 @@
 <h1 align="center">GCC Bugs</h1>
 
 <p>The latest version of this document is always available at
-<a href="http://gcc.gnu.org/bugs.html">
-http://gcc.gnu.org/bugs.html</a>.</p>
+<a href="http://www.gnu.org/software/gcc/bugs.html">http://www.gnu.org/software/gcc/bugs.html</a>.</p>
 
 <hr>
 
