Rename "Platforms" to "Supported Platforms".

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,7 +36,7 @@
 <P>
 <A HREF="faq.html">FAQ</A><BR>
 <A HREF="http://gcc.gnu.org/install/">Installation</A><BR>
-<A HREF="http://gcc.gnu.org/install/specific.html">Platforms</A><BR>
+<A HREF="http://gcc.gnu.org/install/specific.html">Supported Platforms</A><BR>
 <A HREF="onlinedocs/">Manual</A><BR>
 <A HREF="readings.html">Further Readings</A>
 </P>
