Remove some old items. Remove obsolete parts of others. Correct spelling of GCC.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -57,10 +57,9 @@ page</a>.</p>
     <li><a href="#multipletests">How can I run the test suite with multiple options?</a></li>
   </ol></li>
 
-  <li><a href="#old">Older versions of GCC or EGCS</a>
+  <li><a href="#old">Older versions of GCC</a>
   <ol>
-    <li><a href="#2.95suite">Why is there no testsuite in GCC 2.95?</a></li>
-    <li><a href="#2.95sstream">Is there a stringstream / sstream for gcc 2.95.2?</a></li> 
+    <li><a href="#2.95sstream">Is there a stringstream / sstream for GCC 2.95.2?</a></li> 
   </ol></li>
 
   <li><a href="#misc">Miscellaneous</a>
@@ -68,13 +67,10 @@ page</a>.</p>
     <li><a href="#memexhausted">Virtual memory exhausted</a></li>
     <li><a href="#friend">Friend Templates</a></li>
     <li><a href="#generated_files">Why do I need autoconf, bison, xgettext, automake, etc?</a></li>
-    <li><a href="#gdb">Problems debugging GCC code</a></li>
-    <li><a href="#gnat">Using GCC with GNAT/Ada</a></li>
     <li><a href="#picflag-needed">Why can't I build a shared library?</a></li>
     <li><a href="#squangle">How to work around too long C++ symbol names? 
 	 (<tt>-fsquangle</tt>)</a></li>
     <li><a href="#vtables">When building C++, the linker says my constructors, destructors or virtual tables are undefined, but I defined them</a></li>
-    <li><a href="#libstdc++">What is libstdc++-v3 and how can I use it with g++?</a></li>
     <li><a href="#incremental">Will GCC someday include an incremental linker?</a></li>
   </ol></li>
 </ol>
@@ -249,10 +245,6 @@ do not follow the install instructions carefully.</p>
 "make bootstrap" if you are building a native compiler or "make cross"
 if you are building a cross compiler.</p>
 
-<p>It has also been reported that the Fortran compiler can not be built     
-on Red Hat 4.X GNU/Linux for the Alpha.  Fixing this may require upgrading
-binutils or to Red Hat 5.0; we'll provide more information as it becomes  
-available.</p>
 
 <hr>
 <h2><a name="multiple">How to install multiple versions of GCC</a></h2>
@@ -472,19 +464,7 @@ no additional flags.</p>
 <a name="old"></a>
 <h1>Older versions of GCC and EGCS</h1>
 
-<h2><a name="2.95suite">Why is there no testsuite in GCC 2.95?</a></h2>
-
-<p>The GCC testsuite is not included in the GCC 2.95 release due to the
-uncertain copyright status of some tests.</p>
-
-<p>The GCC team has reviewed the entire testsuite to find and remove
-any tests with uncertain copyright status, following guidelines from
-Prof. Eben Moglen.  The testsuite is included in GCC 3.0 and
-subsequent releases.  Only a few tests needed to be removed from the
-testsuite.</p>
-
-<hr>
-<h2><a name="2.95sstream">Is there a stringstream / sstream for gcc 2.95.2?</a></h2>
+<h2><a name="2.95sstream">Is there a stringstream / sstream for GCC 2.95.2?</a></h2>
 
 <p>Yes, it's at: 
 <a href="http://gcc.gnu.org/ml/libstdc++/2000-q2/msg00700/sstream">
@@ -493,6 +473,8 @@ testsuite.</p>
 <hr>
 <a name="misc"></a>  
 <h1>Miscellaneous</h1>
+
+
 
 <h2><a name="memexhausted">Virtual memory exhausted error</a></h2>
 
@@ -597,22 +579,6 @@ of packages.</p>
 
 
 <hr>
-<h2><a name="gdb">Problems debugging GCC code</a></h2>
-
-<p>On some systems GCC will produce dwarf debug records by default; however
-the gdb-4.16 release may not be able to read such debug records.</p>
-
-<p>You can either use the argument "-gstabs" instead of "-g" or pick up
-a copy of gdb-4.17 to work around the problem.
-
-<hr>
-<h2><a name="gnat">Using GCC with GNAT/Ada </a></h2>
-<p>The GNU Ada front-end is not currently supported by GCC, but work
-is in progress to integrate GNU Ada into the GCC CVS repository and
-produce new releases based on current versions of GCC.</p>
-
-
-<hr>
 <h2><a name="picflag-needed">Why can't I build a shared library?</a></h2>
 
 <p>When building a shared library you may get an error message from the
@@ -683,16 +649,6 @@ done.</p>
 pure are defined.  Note that a destructor must be defined even if it
 is declared pure-virtual [class.dtor]/7.</p>
 
-<hr>
-<h2><a name="libstdc++">What is libstdc++-v3 and how can I use it with g++?</a></h2>
-
-<p>From the
-<a href="http://gcc.gnu.org/onlinedocs/libstdc++/faq/index.html">libstdc++-v3 FAQ</a>:
-"The GNU Standard C++ Library v3, or libstdc++-2.9x, is an ongoing
-project to implement the ISO 14882 Standard C++ library as described
-in chapters 17 through 27 and annex D."</p>
-
-<p>libstdc++-v3 is enabled by default in 3.x releases of GCC.</p>
 
 <hr>
 <h2><a name="incremental">Will GCC someday include an incremental linker?</a></h2>
