* index.html: Mention javax.naming and javax.transaction.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -69,6 +69,13 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 
 <table>
 <tr><td valign="top">
+<b>October 24, 2001</b>
+</td><td>
+Tom Tromey of Red Hat checked in the <code>javax.naming</code> and
+<code>javax.transaction</tt> packages, written by Warren Levy and him.
+</td></tr>
+
+<tr><td valign="top">
 <b>October 2, 2001</b>
 </td><td>
 Tom Tromey of Red Hat has written the support code necessary to
