* index.html: We finished javax.naming -- AG started it.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,8 +72,10 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <b>October 24, 2001</b>
 </td><td>
 Tom Tromey of Red Hat checked in the <code>javax.naming</code> and
-<code>javax.transaction</tt> packages, written by Warren Levy and him.
+<code>javax.transaction</tt> packages, started by Anthony Green
+finished by Warren Levy and Tom.
 </td></tr>
+
 
 <tr><td valign="top">
 <b>October 2, 2001</b>
