Update for 3.0.2 release

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -155,6 +155,11 @@ GCC 3.0.2 is scheduled for October.
 
 <dl>
 
+<dt><b>October 25, 2001</b></dt>
+<dd>
+GCC 3.0.2 has been released.
+</dd>
+
 <dt><b>October 11, 2001</b></dt>
 <dd>
 <a href="http://www.axis.com/">Axis Communications</a> has contributed 
