--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -16,6 +16,25 @@
      versions.  -->
 
 <ul>
+  <li>GCC 3.0.2 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcc.html">GCC
+         3.0.2 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcc.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/g77.html">G77
+         0.5.26 (GCC 3.0.2) Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/g77.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcj.html">GCC
+         3.0.2 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/gcj.ps.gz">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/cpp.html">GCC
+         3.0.2 CPP Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.2/cpp.ps.gz">also
+         in PostScript</a>)</li>
+  </ul></li>
   <li>GCC 3.0.1 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.html">GCC
