--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -35,6 +35,7 @@ number is maintained.</p>
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
 
+<tr><td><a href="gcc-3.0/">GCC 3.0.2</a></td><td>3.0.2</td> <td>October 25, 2001</td></tr>
 <tr><td><a href="gcc-3.0/">GCC 3.0.1</a></td><td>3.0.1</td> <td>August 20, 2001</td></tr>
 <tr><td><a href="gcc-3.0/">GCC 3.0</a></td><td>3.0</td> <td>June 18, 2001</td></tr>
 
