Add initial phases/branchpoints timeline.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -214,6 +214,54 @@ release, as necessary.</p>
 able to accumulate fixes for the most important problems, and avoid
 spending undue amounts of time on release testing and packaging.</p>
 
+
+<h3>Calendar</h3>
+
+<p>Here is a timeline of recent and upcoming branchpoints (for releases,
+stages of development, bugfixes, etc), resulting from the development plan:
+<pre>
+
+  ... former releases ...
+       |
+       v
+       +-- GCC 3.0 branch created -------------+
+       |              (Feb 12 2001)             \
+       |                                         v
+       v                                      GCC 3.0 release (Jun 18 2001)
+  New development plan announced                   \
+       |              (Jul 18 2001)                 v
+       |                                      GCC 3.0.1 release (Aug 20 2001)
+       |                                              \
+       v                                               v
+  GCC 3.1 Phase 1 (ended Oct 15 2001)         GCC 3.0.2 release (Oct 25 2001)
+       |                                                :
+       v                                                :
+  GCC 3.1 Phase 2 (ends Dec 15 2001)
+       |
+       v
+  GCC 3.1 Phase 3 (ends Feb 15 2002)
+       |
+       +-- GCC 3.1 branch created -------------+
+       |                                        \
+       v                                         v
+  GCC 3.2 Phase 1 (ends Apr 15 2002)          GCC 3.1 release (Apr 15 2002)
+       |                                           \
+       v                                            v
+  GCC 3.2 Phase 2 (ends Jun 15 2001)          GCC 3.1.1 release (Jun 15 2002)
+       |                                              \
+       V                                               v
+  GCC 3.2 Phase 3 (ends Aug 15 2001           GCC 3.1.2 release (Aug 15 2002)
+       |                                                :
+       |                                                :
+       +-- GCC 3.2 branch created -------------+
+       |                                        \
+       :                                         v
+       :                                      GCC 3.2 release (Oct 15 2002)
+       :                                          :
+
+</pre>
+</p>
+
 <hr>
 
 <p id="1">[1] Note that no distinction is made between patches which are
