--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -157,6 +157,10 @@
 
   <li>Additional changes in GCC 3.0.1
   <ul>
+    <li>Fixes for bad code generation during loop unrolling.</li>
+    <li>Fixes for bad code generation by the sibling call optimization.</li>
+    <li>Minor improvements to x86 code generation.</li>
+    <li>Implemenation of function descriptors in C++ vtables for IA64.</li>
     <li>Numerous minor bug-fixes.</li>
   </ul></li>
 </ul>
