Fix spelling errors.

--- a/htdocs/egcs-1.0/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0/egcs-1.0.1.html
@@ -25,7 +25,7 @@ release:
   on systems with newer versions of glibc2.  EGCS 1.0.1 should fix these
   problems.
 
-  <p><li> Compatability with both EGCS 1.0 and GCC 2.8 libgcc exception handling
+  <p><li> Compatibility with both EGCS 1.0 and GCC 2.8 libgcc exception handling
   interfaces.
 
   <p>To avoid future compatibility problems, we strongly urge anyone who is
