--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -256,7 +256,7 @@ $ gij HelloWorld
         <dl> 
           <dt>Considering that AWT support isnt here yet there is no chance of 
             getting Swing running. Once we have AWT support the Swing 1.1.1 may 
-            be useable and even redistributable, but JFC will be another issue, 
+            be usable and even redistributable, but JFC will be another issue, 
             as <a href="mailto:moroz@metahood.ru">Oleg Moroz</a> summarises: 
             <blockquote> 
               <p>1) Swing 1.1.1 for JDK 1.1.x with license that allows to redistribute 
@@ -616,7 +616,7 @@ $ ../configure [...]
           stack boundaries. It is ordinarily caught and handled by the GC -- you 
           can see this in the debugger by using <tt>cont</tt> to continue to the 
           "real" segv. 
-          <p>This shouln't happen anymore, as we dont define MPROTECT_VDB in the 
+          <p>This shouldn't happen anymore, as we don't define MPROTECT_VDB in the 
             GC, at least for Linux/386.</p>
         </dd>
       </dl>
