--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -27,7 +27,7 @@ work. <A HREF=http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01483.html>Details.</
 <tr><td valign="top">
 <b>March 25, 2001</b>
 </td><td>
-Kevin B. Hendricks implemented the neccessary FFI support to get the 
+Kevin B. Hendricks implemented the necessary FFI support to get the 
 libgcj interpreter running on PowerPC. This is now one of our fully supported 
 targets!
 </td></tr>
