Fix typo.  Include dates of each minor release in index.html.

--- a/htdocs/gcc-3.0/index.html
+++ b/htdocs/gcc-3.0/index.html
@@ -16,8 +16,8 @@
 
 <p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
 developers are pleased to announce the release of GCC 3.0.2,
-which is a bug-fix release following
-GCC 3.0 released on June 18, 2001.
+which is a bug-fix release following GCC 3.0.1 released on August 20,
+2001, and GCC 3.0 released on June 18, 2001.
 </p>
 
 <p>GCC used to stand for the GNU C Compiler, but since the compiler
