Link to libiberty and gnat-style manuals.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -136,6 +136,14 @@ existing release.</p>
       Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/chill.ps.gz">also in
          PostScript</a>)</li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/libiberty.html">Libiberty
+      Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/libiberty.ps.gz">also in
+         PostScript</a>)</li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gnat-style.html">GNAT
+      Coding Style Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gnat-style.ps.gz">also in
+         PostScript</a>)</li>
 </ul>
 
 </body>
