Add i686-pc-linux-gnu (SuSE 7.0, glibc 2.1).

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -162,6 +162,11 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful (SuSE 6.2, glibc 2.1.1)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Successful (SuSE 7.0, glibc 2.1)</td>
 </tr>
 
