--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -171,6 +171,11 @@
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu</td>
+<td>Successful (SuSE 7.2, glibc 2.2)</td>
+</tr>
+
+<tr>
 <td>i686-pld-linux-gnu</td>
 <td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
 </tr>
