--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -157,6 +157,11 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful (Red Hat 7.2, glibc 2.2.4, kernel 2.4.13)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Successful (Slackware 8.0, glibc 2.2.3)</td>
 </tr>
 
