Restores/complete history which was removed by the updates for GCC 3.0.2.

--- a/htdocs/gcc-3.0/index.html
+++ b/htdocs/gcc-3.0/index.html
@@ -6,7 +6,10 @@
 
 <body>
 
-<p>October 25, 2001: GCC 3.0.2 has been released.</p>
+<p>
+June 18, 2001: GCC 3.0 has been released.<br />
+August 20, 2001: GCC 3.0.1 has been released.
+</p>
 
 <hr>
 
